@@ -36,3 +36,9 @@ h1 {
 nz-list {
   margin-bottom: 1rem;
 }
+.res-icon {
+  margin-right: 0.3rem;
+}
+.researches {
+  margin-left: 1rem;
+}
