@@ -351,7 +351,7 @@
         </p>
       </ng-template>
     </nz-tab>
-    <nz-tab nzTitle="Components and modding">
+    <nz-tab nzTitle="Components & modding">
       <ng-template nz-tab>
         <h2>Components</h2>
         <p>
@@ -398,8 +398,9 @@
           Computing research line and some special research will unlock buffs on
           bottom of screen.<br />
           The Computing research line will unlock automation; priority two or
-          three are fired when previous priority buffs are active. After
-          researching "Computing IV" priority one are fired on full computing.
+          three are fired when previous priority buffs are active. <br />
+          After researching "Computing IV" priority one can be fired on full
+          computing.
         </p>
       </ng-template>
     </nz-tab>
