@@ -1,5 +1,6 @@
 nz-card-meta {
   margin-top: 0.5rem;
+  max-width: 30rem;
 }
 
 ul {
