@@ -41,6 +41,7 @@ export class Module implements IUnlockable {
   adaptivePrecision = 0;
   threatGainMulti = 1;
   research: Research;
+  specialResearch: Research;
   groupId = 0;
   constructor() {}
   init(moduleData: ModuleData) {
